--- a/public/app/styles/_minimap.scss
+++ b/public/app/styles/_minimap.scss
@@ -56,7 +56,7 @@
 }
 
 .dungeon-map {
-    height: 165px;
+    height: 150px;
     padding: 10px;
     background-color: $color-primary-lightened;
     border: 1px solid $color-primary;
@@ -79,11 +79,11 @@
         display: table-cell;
         vertical-align: top;
         width: 10000px;
-        height: 141px;
+        height: 126px;
         overflow: hidden;
         position: relative;
-        background-color: $color-primary-lightened;
-        background-size: 20px 20px;
+        background-color: #f0f0f0;
+        background-size: 25px 25px;
         background-image: linear-gradient(to right, $color-primary-muted 1px, transparent 1px), linear-gradient(to bottom, $color-primary-muted 1px, transparent 1px);
 
         #dungeon-map-floor {
@@ -114,7 +114,7 @@
         opacity: 0;
 
         &.visible {
-            background-color: $color-primary-muted;
+            background-color: $color-primary;
             opacity: 1;
         }
 
@@ -133,7 +133,7 @@
         }
 
         .dungeon-map-door {
-            background-color: $color-primary-muted;
+            background-color: $color-primary;
             position: absolute;
 
             &.dungeon-map-door-n {
