--- a/public/app/styles/_buttons.scss
+++ b/public/app/styles/_buttons.scss
@@ -65,9 +65,8 @@ button {
         left: 0;
         bottom: 0;
         width: 0%;
-        background-color: #f00;
+        background-color: $color-primary;
         height: 3px;
-        transition: width 150ms;
         z-index: 1;
     }
 
@@ -77,7 +76,6 @@ button {
         left: 0;
         bottom: 0;
         width: 0%;
-        background-color: #f00;
         transition: width 150ms;
         background-color: $color-primary-lightened;
         top: 0;
