--- a/public/app/styles/_utilities.scss
+++ b/public/app/styles/_utilities.scss
@@ -18,7 +18,7 @@
         }
         .btn {
             margin: 0;
-            border: 0;
+            border-color: transparent;
         }
     }
 }
