--- a/public/app/components/utilities/utilities.html
+++ b/public/app/components/utilities/utilities.html
@@ -5,7 +5,7 @@
         <a class="btn" href ui-sref="backpack">Backpack</a>
       </li>
       <li>
-        <st-meter-button model="utilitiesCtrl.health" max="utilitiesCtrl.vitality" label="'Status'"></st-meter-button>
+        <st-meter-button model="utilitiesCtrl.health" max="utilitiesCtrl.vitality" alert="utilitiesCtrl.message" label="'Status'"></st-meter-button>
       </li>
       <li>
         <a class="btn" href ui-sref="backpack">Menu</a>
