--- a/public/app/styles/_buttons.scss
+++ b/public/app/styles/_buttons.scss
@@ -76,10 +76,23 @@ button {
         left: 0;
         bottom: 0;
         width: 0%;
-        transition: width 150ms;
-        background-color: $color-primary-lightened;
+
+        background-color: $color-primary-muted;
         top: 0;
         height: 100%;
+    }
+
+    .btn-message {
+        position: absolute;
+        bottom: 0;
+        opacity: 0;
+        transition: all 250ms ease-out;
+        color: #f00;
+
+        &.on {
+            bottom: 10px;
+            opacity: 1;
+        }
     }
 }
 
